force-app/main/default/objects/Account/fields/Accepts_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Accepts_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepts Marketing</label>
    <type>Checkbox</type>
</CustomField>