force-app/main/default/objects/Account/fields/AuthorizeNet_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>AuthorizeNet_Customer_Id__c</fullName>
    <description>Stores the Authorize.Net customer profile identifier linked to this account.</description>
    <label>Authorize.Net Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>