force-app/main/default/objects/Account/fields/Carrier_Package_Weight__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Package_Weight__c</fullName>
    <label>Carrier Package Weight (lbs)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>