force-app/main/default/objects/Account/fields/Carrier_Type__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Type__c</fullName>
    <label>Carrier Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FedEx</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>DHL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>