force-app/main/default/objects/Account/fields/Email_Consent_State__c.field-meta.xml
<CustomField>
    <fullName>Email_Consent_State__c</fullName>
    <label>Email Consent State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>