force-app/main/default/objects/Account/fields/Email_Opt_In_Level__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_In_Level__c</fullName>
    <label>Email Opt-In Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>