force-app/main/default/objects/Account/fields/FamilyName__c.field-meta.xml
<CustomField>
    <fullName>FamilyName__c</fullName>
    <label>FamilyName</label>
    <length>222</length>
    <type>Text</type>
</CustomField>