force-app/main/default/objects/Account/fields/GivenName__c.field-meta.xml
<CustomField>
    <fullName>GivenName__c</fullName>
    <label>GivenName</label>
    <length>222</length>
    <type>Text</type>
</CustomField>