force-app/main/default/objects/Account/fields/Last_Shipment_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Last_Shipment_Tracking__c</fullName>
    <label>Last Shipment Tracking #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>