force-app/main/default/objects/Account/fields/Main_Email__c.field-meta.xml
<CustomField>
    <fullName>Main_Email__c</fullName>
    <label>Main Email</label>
    <type>Email</type>
</CustomField>