force-app/main/default/objects/Account/fields/Omnisend_Segment__c.field-meta.xml
<CustomField>
    <fullName>Omnisend_Segment__c</fullName>
    <label>Omnisend Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>