force-app/main/default/objects/Account/fields/PrimaryEmailAddr__c.field-meta.xml
<CustomField>
    <fullName>PrimaryEmailAddr__c</fullName>
    <label>PrimaryEmailAddr</label>
    <length>222</length>
    <type>Text</type>
</CustomField>