force-app/main/default/objects/Account/fields/Resale_Number__c.field-meta.xml
<CustomField>
    <fullName>Resale_Number__c</fullName>
    <label>Resale Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>