force-app/main/default/objects/Account/fields/Shopify_ID__c.field-meta.xml
<CustomField>
    <fullName>Shopify_ID__c</fullName>
    <externalId>true</externalId>
    <label>Shopify ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>