force-app/main/default/objects/Account/fields/Shopify_Tags__c.field-meta.xml
<CustomField>
    <fullName>Shopify_Tags__c</fullName>
    <label>Shopify Tags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>