force-app/main/default/objects/Account/fields/Smile_Points_Balance__c.field-meta.xml
<CustomField>
    <fullName>Smile_Points_Balance__c</fullName>
    <label>Smile Points Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>