force-app/main/default/objects/Account/fields/Smile_Referral_URL__c.field-meta.xml
<CustomField>
    <fullName>Smile_Referral_URL__c</fullName>
    <label>Smile Referral URL</label>
    <type>Url</type>
</CustomField>