force-app/main/default/objects/Account/fields/Smile_State__c.field-meta.xml
<CustomField>
    <fullName>Smile_State__c</fullName>
    <label>Smile State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>