force-app/main/default/objects/Account/fields/Smile_VIP_Tier_ID__c.field-meta.xml
<CustomField>
    <fullName>Smile_VIP_Tier_ID__c</fullName>
    <label>Smile VIP Tier ID</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>