force-app/main/default/objects/Account/fields/Smile_VIP_Tier_Name__c.field-meta.xml
<CustomField>
    <fullName>Smile_VIP_Tier_Name__c</fullName>
    <label>Smile VIP Tier Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>