force-app/main/default/objects/Account/fields/SMS_Consent_State__c.field-meta.xml
<CustomField>
    <fullName>SMS_Consent_State__c</fullName>
    <label>SMS Consent State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>