force-app/main/default/objects/Account/fields/SMS_Opt_In_Level__c.field-meta.xml
<CustomField>
    <fullName>SMS_Opt_In_Level__c</fullName>
    <label>SMS Opt-In Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>