force-app/main/default/objects/Account/fields/Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code__c</fullName>
    <label>Tax Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>TBL</fullName>
            </value>
            <value>
                <fullName>HTH</fullName>
            </value>
            <value>
                <fullName>NNT</fullName>
            </value>
            <value>
                <fullName>CTY</fullName>
            </value>
            <value>
                <fullName>WHL</fullName>
            </value>
            <value>
                <fullName>HND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>